fix-overflow

--- a/MILESTONE2/assets/css/style.css
+++ b/MILESTONE2/assets/css/style.css
@@ -9,6 +9,7 @@
 body{
     font-family: 'Lato', sans-serif;
     height: 100vh;
+    overflow: hidden;
     background: linear-gradient(180deg, #009688 17%, #dadbd3 10%, #d2dbdb 30%);
 }
 
